--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities {
+  .container-center {
+    @apply mx-auto max-w-[1240px] w-11/12;
+  }
+}
